; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_network_agent.c_netagent_ctl_setopt.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_network_agent.c_netagent_ctl_setopt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netagent_session = type { i32 }

@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Received a NULL session\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"Request for registration\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"Request for update\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"Request for unregistration\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"Request for assigning nexus\00", align 1
@.str.5 = private unnamed_addr constant [25 x i8] c"Request to set use count\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"Received unknown option\00", align 1
@ENOPROTOOPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i32, i8*, i64)* @netagent_ctl_setopt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netagent_ctl_setopt(i32 %0, i32 %1, i8* %2, i32 %3, i8* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca %struct.netagent_session*, align 8
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i64 %5, i64* %12, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = bitcast i8* %15 to %struct.netagent_session*
  store %struct.netagent_session* %16, %struct.netagent_session** %13, align 8
  %17 = load %struct.netagent_session*, %struct.netagent_session** %13, align 8
  %18 = icmp eq %struct.netagent_session* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %6
  %20 = load i32, i32* @LOG_ERR, align 4
  %21 = call i32 @NETAGENTLOG0(i32 %20, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* @EINVAL, align 4
  store i32 %22, i32* %14, align 4
  br label %65

23:                                               ; preds = %6
  %24 = load i32, i32* %10, align 4
  switch i32 %24, label %60 [
    i32 131, label %25
    i32 129, label %32
    i32 130, label %39
    i32 132, label %46
    i32 128, label %53
  ]

25:                                               ; preds = %23
  %26 = load i32, i32* @LOG_DEBUG, align 4
  %27 = call i32 @NETAGENTLOG0(i32 %26, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %28 = load %struct.netagent_session*, %struct.netagent_session** %13, align 8
  %29 = load i8*, i8** %11, align 8
  %30 = load i64, i64* %12, align 8
  %31 = call i32 @netagent_handle_register_setopt(%struct.netagent_session* %28, i8* %29, i64 %30)
  store i32 %31, i32* %14, align 4
  br label %64

32:                                               ; preds = %23
  %33 = load i32, i32* @LOG_DEBUG, align 4
  %34 = call i32 @NETAGENTLOG0(i32 %33, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %35 = load %struct.netagent_session*, %struct.netagent_session** %13, align 8
  %36 = load i8*, i8** %11, align 8
  %37 = load i64, i64* %12, align 8
  %38 = call i32 @netagent_handle_update_setopt(%struct.netagent_session* %35, i8* %36, i64 %37)
  store i32 %38, i32* %14, align 4
  br label %64

39:                                               ; preds = %23
  %40 = load i32, i32* @LOG_DEBUG, align 4
  %41 = call i32 @NETAGENTLOG0(i32 %40, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  %42 = load %struct.netagent_session*, %struct.netagent_session** %13, align 8
  %43 = load i8*, i8** %11, align 8
  %44 = load i64, i64* %12, align 8
  %45 = call i32 @netagent_handle_unregister_setopt(%struct.netagent_session* %42, i8* %43, i64 %44)
  store i32 %45, i32* %14, align 4
  br label %64

46:                                               ; preds = %23
  %47 = load i32, i32* @LOG_DEBUG, align 4
  %48 = call i32 @NETAGENTLOG0(i32 %47, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0))
  %49 = load %struct.netagent_session*, %struct.netagent_session** %13, align 8
  %50 = load i8*, i8** %11, align 8
  %51 = load i64, i64* %12, align 8
  %52 = call i32 @netagent_handle_assign_nexus_setopt(%struct.netagent_session* %49, i8* %50, i64 %51)
  store i32 %52, i32* %14, align 4
  br label %64

53:                                               ; preds = %23
  %54 = load i32, i32* @LOG_DEBUG, align 4
  %55 = call i32 @NETAGENTLOG0(i32 %54, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.5, i64 0, i64 0))
  %56 = load %struct.netagent_session*, %struct.netagent_session** %13, align 8
  %57 = load i8*, i8** %11, align 8
  %58 = load i64, i64* %12, align 8
  %59 = call i32 @netagent_handle_use_count_setopt(%struct.netagent_session* %56, i8* %57, i64 %58)
  store i32 %59, i32* %14, align 4
  br label %64

60:                                               ; preds = %23
  %61 = load i32, i32* @LOG_ERR, align 4
  %62 = call i32 @NETAGENTLOG0(i32 %61, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0))
  %63 = load i32, i32* @ENOPROTOOPT, align 4
  store i32 %63, i32* %14, align 4
  br label %64

64:                                               ; preds = %60, %53, %46, %39, %32, %25
  br label %65

65:                                               ; preds = %64, %19
  %66 = load i32, i32* %14, align 4
  ret i32 %66
}

declare dso_local i32 @NETAGENTLOG0(i32, i8*) #1

declare dso_local i32 @netagent_handle_register_setopt(%struct.netagent_session*, i8*, i64) #1

declare dso_local i32 @netagent_handle_update_setopt(%struct.netagent_session*, i8*, i64) #1

declare dso_local i32 @netagent_handle_unregister_setopt(%struct.netagent_session*, i8*, i64) #1

declare dso_local i32 @netagent_handle_assign_nexus_setopt(%struct.netagent_session*, i8*, i64) #1

declare dso_local i32 @netagent_handle_use_count_setopt(%struct.netagent_session*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
